@@ -141,7 +141,7 @@ int _dbus_connect_tcp_socket  (const char     *host,
                                dbus_uint32_t   port,
                                DBusError      *error);
 int _dbus_listen_tcp_socket   (const char     *host,
-                               dbus_uint32_t   port,
+                               dbus_uint32_t  *port,
                                DBusError      *error);
 int _dbus_accept              (int             listen_fd);
 
