@@ -1,3 +1,8 @@
+2007-06-08  Havoc Pennington  <hp@redhat.com>
+
+	* backport fix to allow a server to use port=0 or omit port so 
+	the port can be auto-selected by the OS
+
 2007-05-23  Havoc Pennington  <hp@redhat.com>
 
 	* bus/Makefile.am (install-data-hook): create session.d
